acualizacion
- actualizacion de test-em-all.bash
- incorpoporacion de docker